Fix white space between carousel and image. Hover effect on img

--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -24,6 +24,12 @@
     height: 25rem;
     object-fit: cover;
     border-radius: 0.75rem;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+    &:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    }
   }
 
   .carousel-item-padding-180-px {
@@ -35,19 +41,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-  
-  a div {
-    background-color: $moonlight-white;
-    border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-
-    &:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-    }
   }
-}
 
   .legend {
     background-color: #5a3e84;
@@ -62,4 +56,3 @@
     border-radius: 0.75rem;
   }
 }
-
